# thebrain-mcp

./: .deploy-trigger  .env.example  .fastmcp.yaml  .gitignore  BRAINQUERY.md  CHANGELOG.md  NOTICE  README.md  fastmcp.json  mcp.json  pyproject.toml  requirements.txt  server.json
python/: .env.example  .fastmcp.yaml  .gitignore  BRAINQUERY.md  INSTALL.md  QUICKSTART.md  README.md  TEST_RESULTS.md  mcp.json  pyproject.toml  requirements-deploy.txt  requirements.txt
python/examples/: basic_usage.py  claude_desktop_config.json
python/src/thebrain_mcp/: __init__.py  actor.py  btcpay_client.py  config.py  infographic.py  ledger.py  ledger_cache.py  server.py  vault.py  vault_backend.py
python/src/thebrain_mcp/api/: client.py  models.py
python/src/thebrain_mcp/brainquery/: __init__.py  ir.py  parser.py  planner.py
python/src/thebrain_mcp/tools/: attachments.py  brains.py  credits.py  links.py  morpher.py  notes.py  orphanage.py  stats.py  thoughts.py  whowhen.py  wikilinks.py
python/src/thebrain_mcp/utils/: constants.py  formatters.py
python/tests/: test_actor.py  test_api_client.py  test_brain_query_tool.py  test_brainquery_parser.py  test_brainquery_planner.py  test_btcpay_client.py  test_credit_tools.py  test_delete_link_verified.py  test_deploy_smoke.py  test_dpyc_identity.py  test_infographic.py  test_invoice_persistence.py  test_ledger.py  test_ledger_cache.py  test_ledger_durability.py  test_ledger_hardening.py  test_morpher.py  test_orphanage.py  test_paginated_graph.py  test_payment_probe.py  test_tool_gating.py  test_uuid_validation.py  test_vault.py  test_whowhen.py  test_wikilinks.py  test_zero_cost_session.py
(+31 files in other folders)
